--- a/Discuz.Web/templates/default/login.htm
+++ b/Discuz.Web/templates/default/login.htm
@@ -142,10 +142,8 @@
 				</div>
                 <div class="sipt lpsw">
                     <label for="diseaseSection">版  块　：</label>
-                    <select tabindex="3" class="txt" size="36" name="diseaseSection" id="diseaseSection" >
-                        <option value="x">血透</option>
-                        <option value="f">腹透</option>
-                    </select>
+                    <label><input name="diseaseSection" type="radio" value="f" />血液透析</label>
+                    <label><input name="diseaseSection" type="radio" value="f" />腹膜透析</label>
                 </div>
 			<%/if%>	
 			<%if {isseccode}%>
