--- a/Discuz.Web/templates/default/dnt.css
+++ b/Discuz.Web/templates/default/dnt.css
@@ -42,7 +42,8 @@ hr{display:block;clear:both;}
 		#ls_more {background:#FEFEFE;border:1px solid #DDD;line-height:1.5em;overflow:hidden;padding:10px;width:160px;z-index:300;}
 			#ls_more h3{overflow:hidden;margin-bottom:10px;}
 			.head form p{padding-bottom:4px;}
-			.fastlg .txt, #ls_more .txt {font-size: 12px;height: 16px;line-height: 16px;}
+			.fastlg .txt, #ls_more .txt {font-size: 12px;height: 16px;line-height: 16px;display:none;}
+            .fastlg label{display:none}
 		#um{float:right;padding-top:10px;width:60%;text-align:right;line-height:2.3em;}
 			.avt img {background:#FFFFFF;border-color:#F2F2F2 #CDCDCD #CDCDCD #F2F2F2;border-style:solid;border-width:1px;height:48px;padding:2px;width:48px;margin-left:10px;}
 			#um,#um a{color:#444;}
