--- a/Discuz.Web/templates/default/getpassword.htm
+++ b/Discuz.Web/templates/default/getpassword.htm
@@ -62,6 +62,9 @@
 				<label for="Email:">Email　：</label>
 				<input name="email" type="text" id="email" size="25" class="txt"/>
 			</div>
+            <div class="ftid sltp" style="margin-bottom:10px">
+                <label><input name="diseaseSection" type="radio" checked="" value="x">血液透析</label><label><input name="diseaseSection" type="radio" value="f">腹膜透析</label>
+            </div>
 		<%if {isseccode}%>
 			<div class="lpsw" style="position: relative;margin-bottom:10px;">
 				<%template _vcode%>
